luxtensor/crates/luxtensor-oracle/errors5.txt
cargo : warning: unused import: `error`
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath 
errors5.txt -Encoding utf8; Get ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (wa 
   rning: unused import: `error`:String) [], R  
  emoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
 --> 
crates\luxtensor-oracle\src\submitter.rs:6:21
  |
6 | use tracing::{info, error};
  |                     ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused variable: `input_data`
  --> 
crates\luxtensor-oracle\src\processor.rs:21:9
   |
21 |         input_data: Bytes,
   |         ^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_input_data`
   |
   = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: `luxtensor-oracle` (lib) generated 2 
warnings (run `cargo fix --lib -p 
luxtensor-oracle` to apply 2 suggestions)
    Checking luxtensor-oracle v0.1.0 (D:\venera\
cardano\moderntensor\moderntensor\luxtensor\crat
es\luxtensor-oracle)
error[E0433]: failed to resolve: could not find 
`EnvFilter` in `tracing_subscriber`
   --> crates\luxtensor-oracle\src\main.rs:8:35
    |
  8 |         
.with(tracing_subscriber::EnvFilter::new(
    |                                   
^^^^^^^^^ could not find `EnvFilter` in 
`tracing_subscriber`
    |
note: found an item that was configured out
   --> C:\Users\Admin\.cargo\registry\src\index.
crates.io-1949cf8c6b5b557f\tracing-subscriber-0.
3.22\src\lib.rs:239:21
    |
238 |     #![all(feature = "env-filter", 
feature = "std")]
    |            ---------------------- the 
item is gated behind the `env-filter` feature
239 |     pub use filter::EnvFilter;
    |                     ^^^^^^^^^

For more information about this error, try 
`rustc --explain E0433`.
error: could not compile `luxtensor-oracle` 
(bin "luxtensor-oracle") due to 1 previous error
